Datafiles.process Method initial tests

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/runtime": "^7.0.0-beta.39",
     "aws-sdk": "^2.205.0",
     "bcrypt": "^1.0.3",
+    "faker": "^4.1.0",
     "jquery": "^2.2.4",
     "luxon": "^0.5.2",
     "meteor-node-stubs": "^0.3.2",
