--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "@babel/runtime": "^7.0.0-beta.39",
     "aws-sdk": "^2.205.0",
     "bcrypt": "^1.0.3",
+    "datatables-buttons": "^1.0.3",
+    "datatables.net": "^1.10.16",
+    "datatables.net-bs": "^1.10.16",
+    "datatables.net-bs4": "^1.10.16",
+    "datatables.net-buttons": "^1.5.1",
+    "datatables.net-buttons-bs": "^1.5.1",
+    "datatables.net-dt": "^1.10.16",
     "faker": "^4.1.0",
-    "jquery": "^2.2.4",
+    "jquery": "^1.12.4",
     "luxon": "^0.5.2",
     "meteor-node-stubs": "^0.3.2",
     "select2": "^4.0.6-rc.1",
