--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,9 @@
 {
+  "public" : {
+    "ga": {
+      "account":"UA-123347068-1"
+    }
+  },
   "s3": {
     "key": "AKIAJEDESCDXUZ7SAJ3Q",
     "secret": "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",
