aoi viewing stats

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "datatables.net-buttons-bs": "^1.5.1",
     "datatables.net-dt": "^1.10.16",
     "faker": "^4.1.0",
+    "jStat": "^1.7.1",
     "jquery": "^1.12.4",
+    "jstat": "^1.7.1",
     "luxon": "^0.5.2",
     "meteor-node-stubs": "^0.4.1",
     "select2": "^4.0.6-rc.1",
