--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/runtime": "^7.0.0-beta.54",
     "aws-sdk": "^2.205.0",
     "bcrypt": "^1.0.3",
+    "csvtojson": "^2.0.8",
     "datatables-buttons": "^1.0.3",
     "datatables.net": "^1.10.16",
     "datatables.net-bs": "^1.10.16",
@@ -21,6 +22,7 @@
     "jquery": "^1.12.4",
     "jstat": "^1.7.1",
     "luxon": "^0.5.2",
+    "meteor-job": "^1.5.2",
     "meteor-node-stubs": "^0.4.1",
     "select2": "^4.0.6-rc.1",
     "select2-bootstrap-theme": "0.1.0-beta.10",
