--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "meteor-job": "^1.5.2",
     "meteor-node-stubs": "^0.4.1",
     "moment": "^2.22.2",
+    "plotly.js-dist": "^1.39.4",
+    "popper.js": "^1.14.4",
     "select2": "^4.0.6-rc.1",
     "select2-bootstrap-theme": "0.1.0-beta.10",
     "simpl-schema": "^1.4.2",
