--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "datatables.net-buttons-bs": "^1.5.1",
     "datatables.net-dt": "^1.10.16",
     "faker": "^4.1.0",
+    "hull.js": "^0.2.10",
     "jStat": "^1.7.1",
     "jquery": "^1.12.4",
     "jstat": "^1.7.1",
