--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "datatables.net-dt": "^1.10.16",
     "faker": "^4.1.0",
     "hull.js": "^0.2.10",
+    "image-size": "^0.6.3",
     "jStat": "^1.7.1",
     "jquery": "^1.12.4",
     "jstat": "^1.7.1",
@@ -28,7 +29,7 @@
     "moment": "^2.22.2",
     "plotly.js-dist": "^1.39.4",
     "popper.js": "^1.14.4",
-    "select2": "^4.0.6-rc.1",
+    "select2": "^4.0",
     "select2-bootstrap-theme": "0.1.0-beta.10",
     "simpl-schema": "^1.4.2",
     "stringify-object": "^3.2.1"
