--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test-watch": "TEST_WATCH=1 meteor test --driver-package meteortesting:mocha --port 3100"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.54",
+    "@babel/runtime": "^7.2.0",
     "aws-sdk": "^2.205.0",
     "bcrypt": "^1.0.3",
     "csvtojson": "^2.0.8",
