--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "hull.js": "^0.2.10",
     "image-size": "^0.6.3",
     "jStat": "^1.7.1",
-    "jquery": "^1.12.4",
+    "jquery": ">=3.0.0",
     "jstat": "^1.7.1",
     "luxon": "^0.5.8",
     "meteor-job": "^1.5.2",
