--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.2.0",
+    "area-polygon": "^1.0.1",
     "aws-sdk": "^2.385.0",
     "bcrypt": "^1.0.3",
     "csvtojson": "^2.0.8",
