--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "datatables.net-buttons-bs": "^1.5.4",
     "datatables.net-dt": "^1.10.19",
     "faker": "^4.1.0",
+    "genstats": "0.0.1",
     "hull.js": "^0.2.10",
     "image-size": "^0.6.3",
     "jStat": "^1.7.1",
     "jquery": ">=3.0.0",
+    "js-call-r": "0.0.4",
     "jstat": "^1.7.1",
     "luxon": "^0.5.8",
     "meteor-job": "^1.5.2",
@@ -30,6 +32,7 @@
     "moment": "^2.23.0",
     "plotly.js-dist": "^1.43.2",
     "popper.js": "^1.14.6",
+    "regression": "^2.0.1",
     "select2": "^4.0",
     "select2-bootstrap-theme": "0.1.0-beta.10",
     "simpl-schema": "1.4.3",
