--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "jStat": "^1.7.1",
     "jquery": ">=3.0.0",
     "js-call-r": "0.0.4",
+    "json2csv": "^4.3.3",
     "jstat": "^1.7.1",
     "luxon": "^0.5.8",
     "meteor-job": "^1.5.2",
     "meteor-node-stubs": "^0.4.1",
     "moment": "^2.23.0",
+    "papaparse": "^4.6.3",
     "plotly.js-dist": "^1.43.2",
     "popper.js": "^1.14.6",
     "regression": "^2.0.1",
