--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "js-call-r": "0.0.4",
     "json2csv": "^4.3.3",
     "jstat": "^1.7.1",
+    "lodash": "^4.17.11",
     "luxon": "^0.5.8",
     "meteor-job": "^1.5.2",
     "meteor-node-stubs": "^0.4.1",
