--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "visualeyes",
   "private": true,
   "scripts": {
-    "start": "meteor run",
+    "start": "meteor --settings settings.json",
     "test": "TEST_WATCH=1 meteor test --driver-package meteortesting:mocha --port 3002"
   },
   "dependencies": {
@@ -35,6 +35,7 @@
     "meteor-job": "^1.5.2",
     "meteor-node-stubs": "^0.4.1",
     "moment": "^2.23.0",
+    "os": "^0.1.1",
     "papaparse": "^4.6.3",
     "plotly.js-dist": "^1.43.2",
     "popper.js": "^1.14.6",
