--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@babel/runtime": "^7.2.0",
     "area-polygon": "^1.0.1",
     "aws-sdk": "^2.385.0",
+    "bcrypt": "^3.0.5",
     "csvtojson": "^2.0.8",
     "datatables-buttons": "^1.0.3",
     "datatables.net": "^1.10.19",
