--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,15 +57,13 @@ jobs:
           name: install npm packages
           command: meteor npm i
       - run:
-          name: code linting
-          command: meteor npm run lint
-      - run:
           name: unit tests
-          command: meteor npm run test:unit
-      - run:
-          name: start app and run e2e tests
-          command: meteor npm run test:e2e-standalone
-          no_output_timeout: 5m
+          # command: meteor npm run test:unit
+          command: npm test
+      # - run:
+      #     name: start app and run e2e tests
+      #     command: meteor npm run test:e2e-standalone
+      #     no_output_timeout: 5m
       - run:
           name: copy meteor bin to build cache
           command: |
