--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "area-polygon": "^1.0.1",
     "aws-sdk": "^2.385.0",
     "bcrypt": "^3.0.5",
+    "chai-as-promised": "^7.1.1",
     "csvtojson": "^2.0.8",
     "datatables-buttons": "^1.0.3",
     "datatables.net": "^1.10.19",
@@ -19,7 +20,6 @@
     "datatables.net-buttons": "^1.5.4",
     "datatables.net-buttons-bs": "^1.5.4",
     "datatables.net-dt": "^1.10.19",
-    "dstools": "^0.2.8",
     "extend": "^3.0.2",
     "faker": "^4.1.0",
     "file-saver": "^2.0.0",
