--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "area-polygon": "^1.0.1",
     "aws-sdk": "^2.385.0",
     "bcrypt": "^3.0.5",
-    "chai-as-promised": "^7.1.1",
     "csvtojson": "^2.0.8",
     "datatables-buttons": "^1.0.3",
     "datatables.net": "^1.10.19",
@@ -45,5 +44,8 @@
     "select2-bootstrap-theme": "0.1.0-beta.10",
     "simpl-schema": "1.4.3",
     "stringify-object": "^3.3.0"
+  },
+  "devDependencies": {
+    "chai-as-promised": "^7.1.1"
   }
 }
