--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 lastAnalysisExport.csv
+lastAnalysisParticipants.csv
+lastAnalysisParticipants.csv
+lastPlotHullSeries.csv
 .DS_Store
 */.DS_Store
 node_modules/
