--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
   "name": "visualeyes",
-  "private": true,
+  "version": "0.0.1",
+  "description": "A visualization and statistical analysis web application for eye tracking data",
+  "license": "MIT",
+  "repository": "mattsears18/VisualEyes",
   "scripts": {
     "start": "meteor --settings settings.json",
     "startMatt": "meteor --settings settingsMatt.json",
-    "test": "TEST_WATCH=1 meteor test --driver-package meteortesting:mocha --port 3002"
+    "test": "TEST_WATCH=1 meteor test --driver-package meteortesting:mocha --port 3002",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
+  "keywords": [
+    "convex",
+    "hull",
+    "convex hull",
+    "eye tracking"
+  ],
   "dependencies": {
     "@babel/runtime": "^7.2.0",
     "area-polygon": "^1.0.1",
@@ -50,6 +60,11 @@
     "underscore": "^1.9.1"
   },
   "devDependencies": {
-    "chai-as-promised": "^7.1.1"
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "coveralls": "^3.0.3",
+    "mocha": "^6.1.4",
+    "mocha-lcov-reporter": "^1.3.0",
+    "nyc": "^14.0.0"
   }
 }
