--- a/package.json
+++ b/package.json
@@ -17,38 +17,38 @@
     "eye tracking"
   ],
   "dependencies": {
-    "@babel/runtime": "^7.2.0",
+    "@babel/runtime": "^7.4.3",
     "area-polygon": "^1.0.1",
-    "aws-sdk": "^2.385.0",
-    "bcrypt": "^3.0.5",
+    "aws-sdk": "^2.442.0",
+    "bcrypt": "^3.0.6",
     "csvtojson": "^2.0.8",
     "datatables-buttons": "^1.0.3",
     "datatables.net": "^1.10.19",
     "datatables.net-bs": "^1.10.19",
     "datatables.net-bs4": "^1.10.19",
-    "datatables.net-buttons": "^1.5.4",
-    "datatables.net-buttons-bs": "^1.5.4",
+    "datatables.net-buttons": "^1.5.6",
+    "datatables.net-buttons-bs": "^1.5.6",
     "datatables.net-dt": "^1.10.19",
     "extend": "^3.0.2",
     "faker": "^4.1.0",
-    "file-saver": "^2.0.0",
+    "file-saver": "^2.0.1",
     "genstats": "0.0.1",
     "hull.js": "git://github.com/mattsears18/hull.git#length-3-pointsets",
     "image-size": "^0.6.3",
     "jStat": "^1.7.1",
-    "jquery": ">=3.0.0",
+    "jquery": "^3.4.0",
     "js-call-r": "0.0.4",
-    "json2csv": "^4.3.3",
+    "json2csv": "^4.5.0",
     "jstat": "^1.7.1",
     "lodash": "^4.17.11",
     "luxon": "^0.5.8",
     "meteor-job": "^1.5.2",
     "meteor-node-stubs": "^0.4.1",
-    "moment": "^2.23.0",
+    "moment": "^2.24.0",
     "os": "^0.1.1",
     "papaparse": "^4.6.3",
-    "plotly.js-dist": "^1.43.2",
-    "popper.js": "^1.14.6",
+    "plotly.js-dist": "^1.47.3",
+    "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "regression": "^2.0.1",
