--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,12 @@ before_script:
 script:
   - meteor npm install --save bcrypt
 
+notifications:
+  email:
+    on_failure: change
+
+after_success: 'npm run coverage'
+
 cache:
   directories:
     - node_modules
