--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "repository": "mattsears18/visual-eyes",
   "scripts": {
     "start": "meteor --settings settings.json",
+    "production": "meteor --settings settings.json --production",
     "test": "meteor test --driver-package meteortesting:mocha --port 3002",
     "watch": "TEST_WATCH=1 npm test",
     "coverage": "BABEL_ENV=COVERAGE COVERAGE=1 COVERAGE_OUT_HTML=1 COVERAGE_APP_FOLDER=$PWD/ meteor test --once --driver-package meteortesting:mocha --port 3003",
@@ -75,6 +76,7 @@
   "devDependencies": {
     "@babel/cli": "7.4.3",
     "@babel/core": "7.4.3",
+    "@babel/node": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "7.4.0",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-transform-modules-commonjs": "7.4.3",
@@ -83,7 +85,6 @@
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "^7.4.4",
-    "@babel/node": "^7.2.2",
     "babel-plugin-istanbul": "^5.1.3",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
@@ -92,6 +93,7 @@
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.19.0",
     "nyc": "^14.0.0",
+    "prettier": "^1.17.0",
     "puppeteer": "^1.15.0"
   }
 }
