--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "scripts": {
     "start": "meteor --settings settings.json",
     "production": "meteor --settings settings.json --production",
+    "debug": "meteor run --inspect-brk=9229",
     "test": "meteor test --driver-package meteortesting:mocha --port 3002",
+    "test-debug": "meteor test --inspect --driver-package=practicalmeteor:mocha --port 3002",
     "watch": "TEST_WATCH=1 npm test",
     "coverage": "BABEL_ENV=COVERAGE COVERAGE=1 COVERAGE_OUT_HTML=1 COVERAGE_APP_FOLDER=$PWD/ meteor test --once --driver-package meteortesting:mocha --port 3003",
-    "coverage:watch": "BABEL_ENV=COVERAGE COVERAGE=1 COVERAGE_VERBOSE=1 COVERAGE_APP_FOLDER=$PWD/ TEST_WATCH=1 meteor test --driver-package meteortesting:mocha --port 3003"
+    "coverage:watch": "BABEL_ENV=COVERAGE COVERAGE=1 COVERAGE_VERBOSE=1 COVERAGE_APP_FOLDER=$PWD/ TEST_WATCH=1 meteor test --driver-package meteortesting:mocha --port 3003",
+    "lint": "eslint ."
   },
   "nyc": {
     "sourceMap": false,
@@ -49,8 +52,15 @@
     "faker": "^4.1.0",
     "file-saver": "^2.0.1",
     "genstats": "0.0.1",
+    "hyper-search": "^0.2.1",
+    "hyper-statusline": "^1.7.6",
+    "hyper-sync-settings": "^2.0.4",
+    "hyperlinks": "^0.5.0",
+    "hyperterm-dibdabs": "0.0.8",
+    "hyperterm-tabs": "^1.4.0",
     "image-size": "^0.6.3",
     "jStat": "^1.7.1",
+    "jest": "^24.8.0",
     "jquery": "^3.4.0",
     "js-call-r": "0.0.4",
     "json2csv": "^4.5.0",
@@ -85,15 +95,23 @@
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "^7.4.4",
+    "@meteorjs/eslint-config-meteor": "^1.0.5",
+    "babel-eslint": "^10.0.1",
     "babel-plugin-istanbul": "^5.1.3",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "coveralls": "^3.0.3",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-import-resolver-meteor": "^0.4.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-meteor": "^5.1.0",
+    "eslint-plugin-react": "^7.13.0",
     "mocha": "^6.1.4",
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.19.0",
     "nyc": "^14.0.0",
-    "prettier": "^1.17.0",
-    "puppeteer": "^1.15.0"
+    "prettier": "^1.17.0"
   }
 }
