--- a/package.json
+++ b/package.json
@@ -71,14 +71,14 @@
   },
   "devDependencies": {
     "@babel/cli": "7.4.3",
-    "@babel/core": "7.4.3",
+    "@babel/core": "^7.4.5",
     "@babel/node": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "7.4.0",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-transform-modules-commonjs": "7.4.3",
     "@babel/plugin-transform-react-constant-elements": "7.2.0",
     "@babel/plugin-transform-react-inline-elements": "7.2.0",
-    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "^7.4.4",
     "@meteorjs/eslint-config-meteor": "^1.0.5",
