--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
     "editor.fontFamily": "Monaco, Menlo, 'Courier New', monospace",
     "html.format.wrapLineLength": 100,
     "editor.wordWrapColumn": 100,
-    "editor.wordWrap": "wordWrapColumn"
+    "editor.wordWrap": "wordWrapColumn",
+    "search.usePCRE2": true
 }
