--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "js-call-r": "0.0.4",
     "json2csv": "^4.5.0",
     "jszip": "^3.2.1",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "luxon": "^0.5.8",
     "meteor-job": "^1.5.2",
     "meteor-node-stubs": "^0.4.1",
@@ -60,6 +60,7 @@
     "papaparse": "^4.6.3",
     "plotly.js-dist": "^1.47.3",
     "popper.js": "^1.15.0",
+    "postmark": "^2.2.8",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "regression": "^2.0.1",
