only create indices on server collections

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,11 +11,14 @@
     "search.usePCRE2": true,
     "cSpell.ignoreWords": [
         "analyses",
+        "dafsdgfhgjfhgd",
         "datafiles",
         "default",
+        "dfgrhtjyghfgdf",
         "dont",
         "exist",
         "make",
+        "sdfegrhtrytefs",
         "that"
     ]
 }
