--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,19 +8,19 @@
   "plugins": ["meteor"],
   "extends": ["plugin:meteor/recommended", "@meteorjs/eslint-config-meteor"],
   "globals": {
-    "Analyses": true,
-    "Aois": true,
-    "Datafiles": true,
-    "Gazepoints": true,
-    "Jobs": true,
-    "Participants": true,
-    "Stimuli": true,
-    "Stimulusfiles": true,
-    "Studies": true,
-    "Users": true,
-    "Variablefiles": true,
-    "Variables": true,
-    "Glances": true,
-    "Schemas": true
+    // "Analyses": true,
+    // "Aois": true,
+    // "Datafiles": true,
+    // "Gazepoints": true,
+    // "Jobs": true,
+    // "Participants": true,
+    // "Stimuli": true,
+    // "Stimulusfiles": true,
+    // "Studies": true,
+    // "Users": true,
+    // "Variablefiles": true,
+    // "Variables": true,
+    // "Glances": true,
+    // "Schemas": true
   }
 }
