cleanup orphaned docs from the database on every server restart

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,5 +22,9 @@
     // "Variables": true,
     // "Glances": true,
     // "Schemas": true
+  },
+  "rules": {
+    "no-underscore-dangle": 0,
+    "no-use-before-define": "off"
   }
 }
