--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,7 @@
   "presets": ["@babel/preset-env"],
   "env": {
     "test": {
-      "presets": ["es2015", "react"],
+      "presets": ["@babel/preset-env"],
       "plugins": ["istanbul"]
     }
   }
