--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
     "search.usePCRE2": true,
     "cSpell.ignoreWords": [
         "analyses",
+        "aoiname",
         "dafsdgfhgjfhgd",
         "datafiles",
         "default",
