--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/runtime": "^7.4.3",
     "area-polygon": "^1.0.1",
     "aws-sdk": "^2.442.0",
+    "babel-plugin-idx": "^2.4.0",
     "bcrypt": "^3.0.6",
     "csvtojson": "^2.0.8",
     "datatables-buttons": "^1.0.3",
@@ -43,6 +44,7 @@
     "hyperlinks": "^0.5.0",
     "hyperterm-dibdabs": "0.0.8",
     "hyperterm-tabs": "^1.4.0",
+    "idx": "^2.5.6",
     "image-size": "^0.6.3",
     "jStat": "^1.8.5",
     "jquery": "^3.4.1",
@@ -88,13 +90,13 @@
     "chai-as-promised": "^7.1.1",
     "coveralls": "^3.0.3",
     "eslint": "^5.16.0",
-    "jest": "^24.8.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-import-resolver-meteor": "^0.4.0",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-meteor": "^5.1.0",
     "eslint-plugin-react": "^7.13.0",
+    "jest": "^24.8.0",
     "mocha": "^6.1.4",
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.19.0",
