number visits per stimulus

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "dfgrhtjyghfgdf",
         "dont",
         "exist",
+        "fillcolor",
         "hmsms",
         "make",
         "milliseconds",
