--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "editor.wordWrap": "wordWrapColumn",
     "search.usePCRE2": true,
     "cSpell.ignoreWords": [
+        "akiajedescdxuz",
         "analyses",
         "aoiname",
         "dafsdgfhgjfhgd",
@@ -23,6 +24,8 @@
         "make",
         "milliseconds",
         "msms",
+        "q",
+        "saj",
         "sdfegrhtrytefs",
         "stimulusid",
         "that",
