--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,10 +12,12 @@
     "cSpell.ignoreWords": [
         "akiajedescdxuz",
         "analyses",
+        "analysisform",
         "aoiname",
         "dafsdgfhgjfhgd",
         "datafiles",
         "default",
+        "destroy",
         "dfgrhtjyghfgdf",
         "dont",
         "exist",
