--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "analyses",
         "analysisform",
         "aoiname",
+        "arrow",
         "dafsdgfhgjfhgd",
         "datafiles",
         "default",
@@ -26,6 +27,7 @@
         "make",
         "milliseconds",
         "msms",
+        "parens",
         "q",
         "saj",
         "sdfegrhtrytefs",
