--- a/package.json
+++ b/package.json
@@ -101,6 +101,8 @@
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.19.0",
     "nyc": "^14.0.0",
-    "prettier": "^1.17.0"
+    "prettier": "^1.17.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-config-prettier": "^6.10.0"
   }
 }
