--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,40 +1,69 @@
 {
-    "workbench.colorTheme": "Monokai",
-    "editor.fontSize": 16,
-    "debug.console.fontSize": 16,
-    "markdown.preview.fontSize": 16,
-    "terminal.integrated.fontSize": 16,
-    "editor.fontFamily": "Monaco, Menlo, 'Courier New', monospace",
-    "html.format.wrapLineLength": 100,
-    "editor.wordWrapColumn": 100,
-    "editor.wordWrap": "wordWrapColumn",
-    "search.usePCRE2": true,
-    "cSpell.ignoreWords": [
-        "akiajedescdxuz",
-        "analyses",
-        "analysisform",
-        "aoiname",
-        "arrow",
-        "dafsdgfhgjfhgd",
-        "datafiles",
-        "default",
-        "destroy",
-        "dfgrhtjyghfgdf",
-        "dont",
-        "exist",
-        "fillcolor",
-        "hmsms",
-        "make",
-        "milliseconds",
-        "msms",
-        "parens",
-        "q",
-        "saj",
-        "sdfegrhtrytefs",
-        "stimulusid",
-        "that",
-        "to",
-        "twicearea",
-        "yujkhghf"
-    ]
+  "workbench.colorTheme": "Monokai",
+  "editor.fontSize": 16,
+  "debug.console.fontSize": 16,
+  "markdown.preview.fontSize": 16,
+  "terminal.integrated.fontSize": 16,
+  "editor.fontFamily": "Monaco, Menlo, 'Courier New', monospace",
+  "html.format.wrapLineLength": 100,
+  "editor.wordWrapColumn": 100,
+  "editor.wordWrap": "wordWrapColumn",
+  "search.usePCRE2": true,
+  "cSpell.ignoreWords": [
+    "akiajedescdxuz",
+    "analyses",
+    "analysisform",
+    "aoiname",
+    "arrow",
+    "dafsdgfhgjfhgd",
+    "datafiles",
+    "default",
+    "destroy",
+    "dfgrhtjyghfgdf",
+    "dont",
+    "exist",
+    "fillcolor",
+    "hmsms",
+    "make",
+    "milliseconds",
+    "msms",
+    "parens",
+    "q",
+    "saj",
+    "sdfegrhtrytefs",
+    "stimulusid",
+    "that",
+    "to",
+    "twicearea",
+    "yujkhghf"
+  ],
+  "yaml.customTags": [
+    "!And",
+    "!And sequence",
+    "!If",
+    "!If sequence",
+    "!Not",
+    "!Not sequence",
+    "!Equals",
+    "!Equals sequence",
+    "!Or",
+    "!Or sequence",
+    "!FindInMap",
+    "!FindInMap sequence",
+    "!Base64",
+    "!Join",
+    "!Join sequence",
+    "!Cidr",
+    "!Ref",
+    "!Sub",
+    "!Sub sequence",
+    "!GetAtt",
+    "!GetAZs",
+    "!ImportValue",
+    "!ImportValue sequence",
+    "!Select",
+    "!Select sequence",
+    "!Split",
+    "!Split sequence"
+  ]
 }
